--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EAS Tracker</title>
-  <link rel="stylesheet" href="/public/style.css" />
+  <link rel="stylesheet" href="/public/style.css"/>
 </head>
 <body>
+  <noscript>Please enable JavaScript to use EAS Tracker.</noscript>
+
   <div id="app">
 
-    <!-- ============ LOGIN ============ -->
+    <!-- ================= LOGIN ================= -->
     <section id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
       <form id="loginForm" class="row" novalidate>
-        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password" />
+        <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
         <button id="loginBtn" type="button" class="btn">Login</button>
       </form>
     </section>
 
-    <!-- ============ MAIN ============ -->
-    <section id="main" class="hide">
+    <!-- ================= MAIN APP ================= -->
+    <section id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
         <a data-view="products">Products</a>
@@ -32,8 +34,9 @@
 
       <div class="container">
 
-        <!-- DASHBOARD -->
+        <!-- ============ DASHBOARD / HOME ============ -->
         <section id="home">
+          <!-- KPIs -->
           <div class="section">
             <h2>Overview</h2>
             <div class="kpis">
@@ -45,29 +48,35 @@
             </div>
           </div>
 
+          <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table class="table" id="stockByCountryTable">
-              <thead><tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr></thead>
+            <table class="table">
+              <thead>
+              <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+              </thead>
               <tbody id="stockByCountryBody"></tbody>
-              <tfoot><tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00</th></tr></tfoot>
+              <tfoot>
+              <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00 USD</th></tr>
+              </tfoot>
             </table>
           </div>
 
+          <!-- Weekly Delivered -->
           <div class="section">
             <h2>Weekly Delivered (Mon → Sun)</h2>
             <div class="card">
               <div class="row wrap">
                 <button id="weeklyPrev" class="btn outline">◀ Prev week</button>
-                <div id="weeklyRange" class="badge">Week:</div>
+                <div class="badge" id="weeklyRange">Week:</div>
                 <button id="weeklyNext" class="btn outline">Next week ▶</button>
                 <button id="weeklySave" class="btn">Save</button>
                 <button id="weeklyReset" class="btn danger outline">Reset</button>
               </div>
-              <small>The grid shows <b>all countries</b>. Edit cells to set delivered pieces.</small>
+              <small>The grid shows all countries in the system. Enter delivered pieces per day/country.</small>
             </div>
             <div class="table-scroll">
-              <table class="table compact" id="weeklyTable">
+              <table id="weeklyTable" class="table compact">
                 <thead id="weeklyHead"></thead>
                 <tbody id="weeklyBody"></tbody>
                 <tfoot>
@@ -81,6 +90,7 @@
             </div>
           </div>
 
+          <!-- Daily Advertising Spend -->
           <div class="section">
             <h2>Daily Advertising Spend</h2>
             <div class="card">
@@ -89,17 +99,17 @@
                   <option value="facebook">Facebook</option>
                   <option value="tiktok">TikTok</option>
                   <option value="google">Google</option>
-                  <option value="snapchat">Snapchat</option>
                 </select>
                 <select id="adProduct" class="input"></select>
                 <select id="adCountry" class="input"></select>
-                <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01" />
+                <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
                 <button id="adSave" class="btn">Save/Replace</button>
               </div>
-              <small>Saving the same <b>product + platform + country</b> replaces the previous value.</small>
+              <small>Saving again for the same product + platform + country replaces the previous value.</small>
             </div>
           </div>
 
+          <!-- Stock Movement -->
           <div class="section">
             <h2>Stock Movement</h2>
             <div class="card">
@@ -108,17 +118,18 @@
                 <span>→</span>
                 <select id="mvTo" class="input"></select>
                 <select id="mvProduct" class="input"></select>
-                <input id="mvQty" type="number" class="input" placeholder="Qty" min="0" />
-                <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01" />
+                <input id="mvQty" type="number" class="input" placeholder="Qty" min="0"/>
+                <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked arrived, stock adds to destination and deducts from origin.</small>
+              <small>When marked as arrived, the system adds to destination and deducts from origin.</small>
             </div>
           </div>
 
+          <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table" id="shipCK">
+            <table class="table">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -126,9 +137,10 @@
             </table>
           </div>
 
+          <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table" id="shipIC">
+            <table class="table">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -136,16 +148,19 @@
             </table>
           </div>
 
+          <!-- Profit by Country -->
           <div class="section">
             <h2>Profit by Country</h2>
             <div class="row wrap">
               <select id="pcCountry" class="input"><option value="">All countries</option></select>
-              <input id="pcStart" type="date" class="input" />
-              <input id="pcEnd" type="date" class="input" />
+              <input id="pcStart" type="date" class="input"/>
+              <input id="pcEnd" type="date" class="input"/>
               <button id="pcRun" class="btn">Run</button>
             </div>
             <table class="table" id="profitCountry">
-              <thead><tr><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th></tr></thead>
+              <thead><tr>
+                <th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Delivery Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
               <tbody id="profitCountryBody"></tbody>
               <tfoot>
                 <tr class="totals">
@@ -155,54 +170,35 @@
             </table>
           </div>
 
+          <!-- To-Do -->
           <div class="section">
             <h2>To-Do</h2>
             <div class="row">
-              <input id="todoText" class="input" placeholder="Task" />
+              <input id="todoText" class="input" placeholder="Task"/>
               <button id="todoAdd" class="btn">Add</button>
             </div>
             <div id="todoList" class="todo-list"></div>
           </div>
 
+          <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
             <div id="weeklyWrap" class="weeks"></div>
           </div>
-
-          <div class="section">
-            <h2>Lifetime Product Performance</h2>
-            <div class="row wrap">
-              <select id="lpProduct" class="input"><option value="">All products</option></select>
-              <input id="lpStart" type="date" class="input" />
-              <input id="lpEnd" type="date" class="input" />
-              <button id="lpRun" class="btn">Run</button>
-            </div>
-            <table class="table" id="lifetimeTable">
-              <thead><tr>
-                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
-              </tr></thead>
-              <tbody id="lifetimeBody"></tbody>
-              <tfoot>
-                <tr class="totals"><th colspan="2">Totals</th>
-                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
         </section>
 
-        <!-- PRODUCTS -->
-        <section id="products" class="hide">
+        <!-- ============ PRODUCTS ============ -->
+        <section id="products" style="display:none">
           <h2>Products</h2>
 
           <div class="card">
             <div class="h">Add Product</div>
             <div class="row wrap">
-              <input id="pName" class="input" placeholder="Name" />
-              <input id="pSku" class="input" placeholder="SKU" />
-              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01" />
-              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01" />
-              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01" />
+              <input id="pName" class="input" placeholder="Name"/>
+              <input id="pSku" class="input" placeholder="SKU"/>
+              <input id="pCost" type="number" class="input" placeholder="Cost from China (USD)" min="0" step="0.01"/>
+              <input id="pShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" min="0" step="0.01"/>
+              <input id="pMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" min="0" step="0.01"/>
               <button id="pAdd" class="btn">Add</button>
             </div>
           </div>
@@ -211,12 +207,11 @@
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
-
-          <small>Open a product page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
+          <small>Open product page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
-        <!-- PERFORMANCE -->
-        <section id="performance" class="hide">
+        <!-- ============ PERFORMANCE ============ -->
+        <section id="performance" style="display:none">
           <h2>Performance</h2>
 
           <div class="card">
@@ -227,11 +222,10 @@
                 <option value="28">Last 28 days</option>
                 <option value="custom">Custom</option>
               </select>
-              <input id="pfStart" type="date" class="input" />
-              <input id="pfEnd" type="date" class="input" />
-              <select id="pfCountry" class="input">
-                <option value="">All countries</option>
-              </select>
+              <input id="pfStart" type="date" class="input"/>
+              <input id="pfEnd" type="date" class="input"/>
+              <!-- “All countries” first; rest injected by app.js -->
+              <select id="pfCountry" class="input"><option value="">All countries</option></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
             <table id="pfTable" class="table">
@@ -242,26 +236,28 @@
             </table>
           </div>
 
+          <!-- Remittance Report -->
           <div class="card">
             <div class="h">Remittance Report</div>
             <div class="row wrap">
-              <input id="rStart" type="date" class="input" />
-              <input id="rEnd" type="date" class="input" />
+              <input id="rStart" type="date" class="input"/>
+              <input id="rEnd" type="date" class="input"/>
+              <!-- China excluded by app.js -->
               <select id="rCountry" class="input"></select>
               <select id="rProduct" class="input"></select>
-              <input id="rOrders" type="number" class="input" placeholder="Orders" min="0" />
-              <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0" />
-              <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01" />
-              <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01" />
-              <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01" />
+              <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
+              <input id="rPieces" type="number" class="input" placeholder="Pieces" min="0"/>
+              <input id="rRev" type="number" class="input" placeholder="Revenue (USD)" min="0" step="0.01"/>
+              <input id="rAds" type="number" class="input" placeholder="Ad Spend (USD)" min="0" step="0.01"/>
+              <input id="rExtra" type="number" class="input" placeholder="Extra cost / piece (USD)" min="0" step="0.01"/>
               <button id="rAdd" class="btn">Add</button>
             </div>
             <div id="rMsg" class="muted"></div>
           </div>
         </section>
 
-        <!-- FINANCE -->
-        <section id="finance" class="hide">
+        <!-- ============ FINANCE ============ -->
+        <section id="finance" style="display:none">
           <h2>Finance</h2>
 
           <div class="card big-balance">
@@ -276,7 +272,7 @@
                 <option value="debit">Debit</option>
                 <option value="credit">Credit</option>
               </select>
-              <input id="fcName" class="input" placeholder="Category name" />
+              <input id="fcName" class="input" placeholder="Category name"/>
               <button id="fcAdd" class="btn">Add Category</button>
             </div>
             <div class="row cats">
@@ -294,20 +290,20 @@
           <div class="card">
             <div class="h">Entries</div>
             <div class="row wrap">
-              <input id="feDate" type="date" class="input" />
+              <input id="feDate" type="date" class="input"/>
               <select id="feType" class="input">
                 <option value="debit">Debit</option>
                 <option value="credit">Credit</option>
               </select>
               <select id="feCat" class="input"></select>
-              <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01" />
-              <input id="feNote" class="input" placeholder="Note" />
+              <input id="feAmt" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
+              <input id="feNote" class="input" placeholder="Note"/>
               <button id="feAdd" class="btn">Add Entry</button>
             </div>
 
             <div class="row wrap">
-              <input id="fes" type="date" class="input" />
-              <input id="fee" type="date" class="input" />
+              <input id="fes" type="date" class="input"/>
+              <input id="fee" type="date" class="input"/>
               <button id="feRun" class="btn outline">Run</button>
               <div id="feBalance" class="badge">Period Balance: —</div>
             </div>
@@ -319,14 +315,14 @@
           </div>
         </section>
 
-        <!-- SETTINGS -->
-        <section id="settings" class="hide">
+        <!-- ============ SETTINGS ============ -->
+        <section id="settings" style="display:none">
           <h2>Settings</h2>
 
           <div class="card">
             <div class="h">Countries</div>
             <div class="row">
-              <input id="cty" class="input" placeholder="Add country" />
+              <input id="cty" class="input" placeholder="Add country"/>
               <button id="ctyAdd" class="btn">Add</button>
             </div>
             <div id="ctyList" class="chips deletable"></div>
@@ -336,11 +332,11 @@
             <div class="h">Edit Product Info</div>
             <div class="row wrap">
               <select id="epSelect" class="input"><option value="">Select product…</option></select>
-              <input id="epName" class="input" placeholder="Product name" />
-              <input id="epSku" class="input" placeholder="SKU" />
-              <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01" />
-              <input id="epShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01" />
-              <input id="epMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01" />
+              <input id="epName" class="input" placeholder="Product name"/>
+              <input id="epSku" class="input" placeholder="SKU"/>
+              <input id="epCost" type="number" class="input" placeholder="Cost from China (USD)" step="0.01"/>
+              <input id="epShip" type="number" class="input" placeholder="Ship China→Kenya (USD)" step="0.01"/>
+              <input id="epMB" type="number" class="input" placeholder="Profit + Ads Budget (USD)" step="0.01"/>
               <button id="epSave" class="btn">Save Changes</button>
             </div>
           </div>
@@ -348,7 +344,7 @@
           <div class="card">
             <div class="h">Manual Save &amp; Restore</div>
             <div class="row">
-              <input id="snapName" class="input" placeholder="Name this snapshot" />
+              <input id="snapName" class="input" placeholder="Name this snapshot"/>
               <button id="snapSave" class="btn">Save current system data</button>
             </div>
             <table class="table">
@@ -362,7 +358,7 @@
     </section><!-- /main -->
   </div><!-- /app -->
 
-  <!-- Scripts -->
-  <script src="/public/app.js" defer></script>
+  <!-- Scripts (ES modules) -->
+  <script type="module" src="/public/app.js"></script>
 </body>
 </html>
