--- a/index.html
+++ b/index.html
@@ -7,22 +7,20 @@
   <link rel="stylesheet" href="/public/style.css"/>
 </head>
 <body>
-  <noscript>Please enable JavaScript to use EAS Tracker.</noscript>
-
   <div id="app">
 
     <!-- ================= LOGIN ================= -->
-    <section id="login" class="auth">
+    <div id="login" class="auth">
       <h1 class="brand">EAS Tracker</h1>
       <p>Enter password to access</p>
-      <form id="loginForm" class="row" novalidate>
+      <form id="loginForm" novalidate class="row">
         <input id="pw" type="password" class="input" placeholder="Password" autocomplete="current-password"/>
         <button id="loginBtn" type="button" class="btn">Login</button>
       </form>
-    </section>
+    </div>
 
     <!-- ================= MAIN APP ================= -->
-    <section id="main" style="display:none">
+    <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">Dashboard</a>
         <a data-view="products">Products</a>
@@ -51,13 +49,13 @@
           <!-- Total Stock & Ad Spend by Country -->
           <div class="section">
             <h2>Total Stock &amp; Ad Spend by Country</h2>
-            <table class="table">
+            <table id="stockByCountryTable" class="table">
               <thead>
-              <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
+                <tr><th>Country</th><th>Approx. Stock</th><th>Total Ad Spend (USD)</th></tr>
               </thead>
               <tbody id="stockByCountryBody"></tbody>
               <tfoot>
-              <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00 USD</th></tr>
+                <tr class="totals"><th>Totals</th><th id="stockTotal">0</th><th id="adTotal">0.00 USD</th></tr>
               </tfoot>
             </table>
           </div>
@@ -73,14 +71,15 @@
                 <button id="weeklySave" class="btn">Save</button>
                 <button id="weeklyReset" class="btn danger outline">Reset</button>
               </div>
-              <small>The grid shows all countries in the system. Enter delivered pieces per day/country.</small>
+              <small>The grid shows all countries. Edit cells to add delivered pieces per day.</small>
             </div>
             <div class="table-scroll">
               <table id="weeklyTable" class="table compact">
                 <thead id="weeklyHead"></thead>
                 <tbody id="weeklyBody"></tbody>
                 <tfoot>
-                  <tr class="totals"><th>Totals</th>
+                  <tr class="totals">
+                    <th>Totals</th>
                     <th id="wMonT">0</th><th id="wTueT">0</th><th id="wWedT">0</th>
                     <th id="wThuT">0</th><th id="wFriT">0</th><th id="wSatT">0</th><th id="wSunT">0</th>
                     <th id="wAllT">0</th>
@@ -105,7 +104,7 @@
                 <input id="adAmount" type="number" class="input" placeholder="Amount (USD)" min="0" step="0.01"/>
                 <button id="adSave" class="btn">Save/Replace</button>
               </div>
-              <small>Saving again for the same product + platform + country replaces the previous value.</small>
+              <small>Saving with the same product + platform + country replaces the previous value.</small>
             </div>
           </div>
 
@@ -122,14 +121,13 @@
                 <input id="mvShip" type="number" class="input" placeholder="Shipping Cost (USD)" min="0" step="0.01"/>
                 <button id="mvAdd" class="btn">Add Movement</button>
               </div>
-              <small>When marked as arrived, the system adds to destination and deducts from origin.</small>
             </div>
           </div>
 
           <!-- Transit China → Kenya -->
           <div class="section">
             <h2>Transit (China → Kenya)</h2>
-            <table class="table">
+            <table class="table" id="shipCK">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -140,7 +138,7 @@
           <!-- Transit Inter-country -->
           <div class="section">
             <h2>Transit (Inter-country)</h2>
-            <table class="table">
+            <table class="table" id="shipIC">
               <thead><tr>
                 <th>ID</th><th>Product</th><th>Route</th><th>Qty</th><th>Ship Cost</th><th>Departed</th><th>Arrived</th><th>Days</th><th>Actions</th>
               </tr></thead>
@@ -170,7 +168,7 @@
             </table>
           </div>
 
-          <!-- To-Do -->
+          <!-- To-Do + Weekly To-Do -->
           <div class="section">
             <h2>To-Do</h2>
             <div class="row">
@@ -180,10 +178,31 @@
             <div id="todoList" class="todo-list"></div>
           </div>
 
-          <!-- Weekly To-Do -->
           <div class="section">
             <h2>Weekly To-Do</h2>
             <div id="weeklyWrap" class="weeks"></div>
+          </div>
+
+          <!-- Lifetime Product Performance (global) -->
+          <div class="section">
+            <h2>Lifetime Product Performance</h2>
+            <div class="row wrap">
+              <select id="lpProduct" class="input"><option value="">All products</option></select>
+              <input id="lpStart" type="date" class="input"/>
+              <input id="lpEnd" type="date" class="input"/>
+              <button id="lpRun" class="btn">Run</button>
+            </div>
+            <table class="table" id="lifetimeTable">
+              <thead><tr>
+                <th>Product</th><th>Country</th><th>Revenue</th><th>Ad Spend</th><th>Shipping</th><th>Base Cost</th><th>Pieces</th><th>Profit</th>
+              </tr></thead>
+              <tbody id="lifetimeBody"></tbody>
+              <tfoot>
+                <tr class="totals"><th colspan="2">Totals</th>
+                  <th id="ltRevT">0</th><th id="ltAdT">0</th><th id="ltShipT">0</th><th id="ltBaseT">0</th><th id="ltPiecesT">0</th><th id="ltProfitT">0</th>
+                </tr>
+              </tfoot>
+            </table>
           </div>
         </section>
 
@@ -207,7 +226,6 @@
             <thead><tr><th>Name</th><th>SKU</th><th>Status</th><th>Actions</th></tr></thead>
             <tbody></tbody>
           </table>
-          <small>Open product page: <code>product.html?id=&lt;PRODUCT_ID&gt;</code></small>
         </section>
 
         <!-- ============ PERFORMANCE ============ -->
@@ -224,7 +242,6 @@
               </select>
               <input id="pfStart" type="date" class="input"/>
               <input id="pfEnd" type="date" class="input"/>
-              <!-- “All countries” first; rest injected by app.js -->
               <select id="pfCountry" class="input"><option value="">All countries</option></select>
               <button id="pfRun" class="btn">Run</button>
             </div>
@@ -236,13 +253,11 @@
             </table>
           </div>
 
-          <!-- Remittance Report -->
           <div class="card">
             <div class="h">Remittance Report</div>
             <div class="row wrap">
               <input id="rStart" type="date" class="input"/>
               <input id="rEnd" type="date" class="input"/>
-              <!-- China excluded by app.js -->
               <select id="rCountry" class="input"></select>
               <select id="rProduct" class="input"></select>
               <input id="rOrders" type="number" class="input" placeholder="Orders" min="0"/>
@@ -355,10 +370,10 @@
         </section>
 
       </div><!-- /container -->
-    </section><!-- /main -->
+    </div><!-- /main -->
   </div><!-- /app -->
 
-  <!-- Scripts (ES modules) -->
-  <script type="module" src="/public/app.js"></script>
+  <!-- JS -->
+  <script src="/public/app.js" defer></script>
 </body>
 </html>
